a facebook demo loging code pused

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first website</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <h3>A demo facebook login terminal</h3>
+
+    <div>
+        <h1 style="color: blue;">Facebook</h1>
+        <form>
+            <input type="email" placeholder="Enter your email"><br><br>
+            <input type="password" placeholder="Enter your password">
+        </form>
+    </div>
 </body>
 </html>
