added a picture and pused

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
             <input type="password" placeholder="Enter your password">
         </form>
     </div>
+    <div>
+        <h1>Picture of nicolas</h1>
+        <img src="picture/nicolas-cool-lGe2WE9TTOU-unsplash.jpg" alt="" height="400px">
+    </div>
 </body>
 </html>
